SD-updated  for emp reports

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -734,4 +734,14 @@
     <servlet-name>FetchModuleForUser</servlet-name>
     <url-pattern>/FetchModuleForUser</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>EmployeeReportServlet_bill</display-name>
+    <servlet-name>EmployeeReportServlet_bill</servlet-name>
+    <servlet-class>com.accenture.tmt.presentation.servlet.EmployeeReportServlet_bill</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>EmployeeReportServlet_bill</servlet-name>
+    <url-pattern>/EmployeeReportServlet_bill</url-pattern>
+  </servlet-mapping>
 </web-app>
