--- a/src/config.properties
+++ b/src/config.properties
@@ -1,2 +1,3 @@
 #Thu Aug 20 11:35:40 IST 2015
 DB=jdbc:ucanaccess://C\:/Users/n.a.saini/Desktop/EmployeeDB.accdb
+file-upload=C:/Users/sachin.a.bhardwaj/workspace/TMT/WebContent/Docs
